[tool.poetry]
name = "maliput-sim"
version = "0.1.0"
description = "A lightweight simulator for agent development using maliput."
authors = ["Franco Cipollone <franco.c@ekumenlabs.com>"]
license = "BSD 3-Clause License"
readme = "README.md"
packages = [{include = "maliput_sim"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
