[tool.poetry]
name = "maliput_sim"
version = "0.1.0"
description = "A lightweight simulator for agent development using maliput."
authors = ["Franco Cipollone <franco.c@ekumenlabs.com>"]
license = "BSD 3-Clause License"
readme = "README.md"
packages = [{include = "maliput_sim"}]

[tool.poetry.dependencies]
python = "^3.8.1"
foxglove-schemas-protobuf = "^0.1.0"
mcap-protobuf-support = "^0.3.0"
types-protobuf = "^4.23.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
mypy = "^1.3.0"
flake8 = "^6.0.0"

[tool.colcon-poetry-ros.data-files]
"share/maliput_sim" = ["package.xml"]

[tool.poetry.scripts]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
